--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,89 +1,4 @@
-<html lang="es">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/img/logo-agro-forum-agro-color.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/71/71199.png" type="image/x-icon">
-  <!-- CSS -->
-  <link rel="stylesheet" href="/style.css">
-
-  <title>Agro forum</title>
-</head>
-
-<body class="">
-
-  <!-- Scripts JS para Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-
-
-  <!-- Barra de navegacion -->
-  <nav class="navbar-fluid py-3 ">
-    <div class="container ">
-      <div class="row align-items-center ">
-        <div class="col-lg-4 col-md-12 align-self-center p-0 ">
-          <div
-            class="container d-flex flex-row justify-content-md-center justify-content-lg-start justify-content-sm-center justify-content-center alig-items-center ">
-            <a class="navbar-brand" href="/">
-              <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid mb-2" style="width:50px;">
-              <a href="" class="link-light text-decoration-none" style="font-size:30px;">Agro Forum</a>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 my-3">
-          <div class="container">
-            <form class="" role="search">
-              <input class="form-control border form-control-success text-bg-white" type="search" placeholder="Buscador"
-                aria-label="Search" />
-            </form>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <ul
-            class="nav justify-content-lg-end justify-content-md-center justify-content-sm-center justify-content-center fs-5">
-            {{# if res.locals.userFound}}
-            <li class="nav-item">
-              <a class="nav-link link-light btn btn-outline-white " href="/perfil">
-                {{#user}}
-                <img class="img-fluid rounded shadow" src="{{img}}" alt="" style="width: 35px; height: 35px;">
-                {{/user}}
-              </a>
-            </li>
-            <li class="nav-item pt-1">
-              <a class="nav-link link-light btn btn-outline-white " href="/crear">Crear Post</a>
-            </li>
-            {{else }}
-            <li class="nav-item pt-1">
-              <a class="nav-link link-light btn btn-outline-white " href="/login">Login</a>
-            </li>
-
-            <li class="nav-item pt-1">
-              <a class="nav-link link-light btn btn-outline-white " href="/plantas">Plants</a>
-            </li>
-            {{/if}}
-            <li class="nav-item pt-1">
-              <a class="nav-link link-light btn btn-outline-white " href="/posteos">Post's</a>
-            </li>
-            {{# if res.locals.userAdmin}}
-            <li class="nav-item pt-1">
-              <a class="nav-link link-light btn btn-outline-white " href="/planta">Crear categoria de planta</a>
-            </li>
-            {{/if}}
-            </li>
-            </a>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
+  {{>header}}
 
 
   {{!-- PRESENTACIÓN --}}
@@ -250,30 +165,4 @@
   </div>
 
 
-  <!-- Footer -->
-  <footer>
-    <div class="container mt-5 py-5">
-      <nav class="row ">
-        <ul class="nav  justify-content-center border-bottom border-light p-4 mb-4 border-opacity-10 fs-5">
-          <li class="nav-item"><a href="#" class="nav-link link-light mx-4"> <i class="fa-users"> Sobre Nosotros</i></a>
-          </li>
-          <li class="nav-item"><a href="#" class="nav-link link-light mx-4">
-              <i class=" fa-instagram"> Instagram</i></a></li>
-          <li class="nav-item">
-            <a href="#" class="nav-link link-light mx-4">
-              <i class=" fa-twitter" aria-hidden="true"> Twitter</i>
-            </a>
-          </li>
-          <li class="nav-item"><a href="#" class="nav-link link-light mx-4"><i class="fa-comments" aria-hidden="true">
-                FAQs</i>
-            </a>
-          </li>
-        </ul>
-        <p class="text-center mt-2 mb-5 fs-5">© 2022 Los Botanicos SA, Inc</p>
-
-      </nav>
-    </div>
-  </footer>
-</body>
-
-</html>
+{{>footer}}
